--- a/src/java/dbHelpers/dbConn.properties
+++ b/src/java/dbHelpers/dbConn.properties
@@ -1,5 +1,5 @@
 #Oracle DB Properties
 driver.name = oracle.jdbc.OracleDriver
 server.name = jdbc:oracle:thin:@biz-delphi.cloudapp.net:1521:Delphi
-user.name = msci3300f1608
-user.password = msci3300f1608
+user.name = ms3300f1608
+user.password = ms3300f1608
